Definició de Constants no correcta a APIExterna #106
